--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -1,4 +1,5 @@
 general:
+  login: Vous êtes connecté en tant que
   name: Nom
   description: Description
   due_date: Date effective
@@ -8,6 +9,7 @@ general:
   error403Titre: Accès Non Autorisé
   title_list_task: Liste des tâches
   title_list_task_archive: Liste des tâches archivées
+  lblArchive: Type d'archivage
   status:
     title: Statut
     1: À faire
@@ -25,12 +27,13 @@ general:
     back_to_list: Retour à la liste
     go_to_archives: Voir les archives
     list_user: Liste des utilisateurs
-    list_tag: Catégories
+    list_tag: Liste des catégories
     download_pdf: Télécharger le PDF
 datatables:
   sLengthMenu: Affichage de _MENU_ entrées par pages
   sSearch: Rechercher
   sInfo: Affichage de _START_ à _END_ sur _TOTAL_ entrées
+  sInfoEmpty: Affichage de 0 à 0 sur 0 entrées
   previous: Précédent
   next: Suivant
   first: Premier
