--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -10,6 +10,12 @@ general:
   title_list_task: Liste des tâches
   title_list_task_archive: Liste des tâches archivées
   lblArchive: Type d'archivage
+  auto: Auto
+  manual: Manuel
+  title:
+    pageConnect: Se connecter
+    tasklist: Liste des Tâches
+    taskmail: Le résumé de votre tâche
   status:
     title: Statut
     1: À faire
@@ -20,6 +26,7 @@ general:
     cancel: Annuler
     update: Modifier
     delete: Supprimer
+    logout: Déconnexion
     add: Ajouter
     show: Info
     back: Retour
@@ -29,6 +36,12 @@ general:
     list_user: Liste des utilisateurs
     list_tag: Liste des catégories
     download_pdf: Télécharger le PDF
+  login:
+    title: Se connecter
+    mail: Adresse Mail
+    password: Mot de Passe
+    button: Se connecter
+    forgot_password: Mot de passe oublié ?
 datatables:
   sLengthMenu: Affichage de _MENU_ entrées par pages
   sSearch: Rechercher
